src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_special_modified_bessel_i1_out(value out, value self);
value atg_special_modified_bessel_k0(value self);
value atg_special_modified_bessel_k0_out(value out, value self);
value atg_special_modified_bessel_k1(value self);
value atg_special_modified_bessel_k1_out(value out, value self);
value atg_special_multigammaln(value self, int64_t p);
value atg_special_multigammaln_out(value out, value self, int64_t p);
value atg_special_ndtr(value self);
value atg_special_ndtr_out(value out, value self);
value atg_special_ndtri(value self);
value atg_special_ndtri_out(value out, value self);
value atg_special_polygamma(int64_t n, value self);
value atg_special_polygamma_out(value out, int64_t n, value self);
value atg_special_psi(value self);
value atg_special_psi_out(value out, value self);
value atg_special_round(value self, int64_t decimals);
value atg_special_round_out(value out, value self, int64_t decimals);
value atg_special_scaled_modified_bessel_k0(value x);
value atg_special_scaled_modified_bessel_k0_out(value out, value x);
value atg_special_scaled_modified_bessel_k1(value x);
value atg_special_scaled_modified_bessel_k1_out(value out, value x);
value atg_special_shifted_chebyshev_polynomial_t(value x, value n);
value atg_special_shifted_chebyshev_polynomial_t_n_scalar(value x, value n);
value atg_special_shifted_chebyshev_polynomial_t_n_scalar_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_t_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_t_x_scalar(value x, value n);
value atg_special_shifted_chebyshev_polynomial_t_x_scalar_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_u(value x, value n);
value atg_special_shifted_chebyshev_polynomial_u_n_scalar(value x, value n);
value atg_special_shifted_chebyshev_polynomial_u_n_scalar_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_u_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_u_x_scalar(value x, value n);
value atg_special_shifted_chebyshev_polynomial_u_x_scalar_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_v(value x, value n);
value atg_special_shifted_chebyshev_polynomial_v_n_scalar(value x, value n);
value atg_special_shifted_chebyshev_polynomial_v_n_scalar_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_v_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_v_x_scalar(value x, value n);
value atg_special_shifted_chebyshev_polynomial_v_x_scalar_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_w(value x, value n);
value atg_special_shifted_chebyshev_polynomial_w_n_scalar(value x, value n);
value atg_special_shifted_chebyshev_polynomial_w_n_scalar_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_w_out(value out, value x, value n);
value atg_special_shifted_chebyshev_polynomial_w_x_scalar(value x, value n);
value atg_special_shifted_chebyshev_polynomial_w_x_scalar_out(value out, value x, value n);
value atg_special_sinc(value self);
value atg_special_sinc_out(value out, value self);
value atg_special_softmax(value self, int64_t dim, int dtype);
value atg_special_spherical_bessel_j0(value x);
value atg_special_spherical_bessel_j0_out(value out, value x);
value atg_special_xlog1py(value self, value other);
value atg_special_xlog1py_other_scalar(value self, value other);
value atg_special_xlog1py_other_scalar_out(value out, value self, value other);
value atg_special_xlog1py_out(value out, value self, value other);
value atg_special_xlog1py_self_scalar(value self, value other);
value atg_special_xlog1py_self_scalar_out(value out, value self, value other);
value atg_special_xlogy(value self, value other);
value atg_special_xlogy_other_scalar(value self, value other);
value atg_special_xlogy_other_scalar_out(value out, value self, value other);
value atg_special_xlogy_out(value out, value self, value other);
value atg_special_xlogy_self_scalar(value self, value other);
value atg_special_xlogy_self_scalar_out(value out, value self, value other);
value atg_special_zeta(value self, value other);
value atg_special_zeta_other_scalar(value self, value other);
value atg_special_zeta_other_scalar_out(value out, value self, value other);
value atg_special_zeta_out(value out, value self, value other);
value atg_special_zeta_self_scalar(value self, value other);
value atg_special_zeta_self_scalar_out(value out, value self, value other);
value atg_split(value self, int64_t split_size, int64_t dim);
value atg_split_copy(value self, int64_t split_size, int64_t dim);
void atg_split_copy_tensor_out(value out, value self, int64_t split_size, int64_t dim);
value atg_split_sizes(value self, value split_size, int64_t dim);
value atg_split_with_sizes(value self, value split_sizes, int64_t dim);