src/bindings/torch_bindings_generated7.ml

(* THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND! *)

open Ctypes

module C0 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_special_modified_bessel_i1_out =
    foreign
      "atg_special_modified_bessel_i1_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_modified_bessel_k0 =
    foreign "atg_special_modified_bessel_k0" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_modified_bessel_k0_out =
    foreign
      "atg_special_modified_bessel_k0_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_modified_bessel_k1 =
    foreign "atg_special_modified_bessel_k1" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_modified_bessel_k1_out =
    foreign
      "atg_special_modified_bessel_k1_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_multigammaln =
    foreign "atg_special_multigammaln" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_special_multigammaln_out =
    foreign
      "atg_special_multigammaln_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_special_ndtr = foreign "atg_special_ndtr" (gc_tensor @-> returning raw_tensor)

  let stubs_special_ndtr_out =
    foreign "atg_special_ndtr_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_ndtri =
    foreign "atg_special_ndtri" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_ndtri_out =
    foreign "atg_special_ndtri_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_polygamma =
    foreign "atg_special_polygamma" (int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_polygamma_out =
    foreign
      "atg_special_polygamma_out"
      (gc_tensor @-> int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_psi = foreign "atg_special_psi" (gc_tensor @-> returning raw_tensor)

  let stubs_special_psi_out =
    foreign "atg_special_psi_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_round =
    foreign "atg_special_round" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_special_round_out =
    foreign
      "atg_special_round_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_special_scaled_modified_bessel_k0 =
    foreign "atg_special_scaled_modified_bessel_k0" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_scaled_modified_bessel_k0_out =
    foreign
      "atg_special_scaled_modified_bessel_k0_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_scaled_modified_bessel_k1 =
    foreign "atg_special_scaled_modified_bessel_k1" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_scaled_modified_bessel_k1_out =
    foreign
      "atg_special_scaled_modified_bessel_k1_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_t =
    foreign
      "atg_special_shifted_chebyshev_polynomial_t"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_t_n_scalar =
    foreign
      "atg_special_shifted_chebyshev_polynomial_t_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_t_n_scalar_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_t_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_t_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_t_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_t_x_scalar =
    foreign
      "atg_special_shifted_chebyshev_polynomial_t_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_t_x_scalar_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_t_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_u =
    foreign
      "atg_special_shifted_chebyshev_polynomial_u"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_u_n_scalar =
    foreign
      "atg_special_shifted_chebyshev_polynomial_u_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_u_n_scalar_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_u_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_u_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_u_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_u_x_scalar =
    foreign
      "atg_special_shifted_chebyshev_polynomial_u_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_u_x_scalar_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_u_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_v =
    foreign
      "atg_special_shifted_chebyshev_polynomial_v"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_v_n_scalar =
    foreign
      "atg_special_shifted_chebyshev_polynomial_v_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_v_n_scalar_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_v_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_v_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_v_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_v_x_scalar =
    foreign
      "atg_special_shifted_chebyshev_polynomial_v_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_v_x_scalar_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_v_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_w =
    foreign
      "atg_special_shifted_chebyshev_polynomial_w"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_w_n_scalar =
    foreign
      "atg_special_shifted_chebyshev_polynomial_w_n_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_w_n_scalar_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_w_n_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_w_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_w_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_w_x_scalar =
    foreign
      "atg_special_shifted_chebyshev_polynomial_w_x_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_shifted_chebyshev_polynomial_w_x_scalar_out =
    foreign
      "atg_special_shifted_chebyshev_polynomial_w_x_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_sinc = foreign "atg_special_sinc" (gc_tensor @-> returning raw_tensor)

  let stubs_special_sinc_out =
    foreign "atg_special_sinc_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_softmax =
    foreign "atg_special_softmax" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_special_spherical_bessel_j0 =
    foreign "atg_special_spherical_bessel_j0" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_spherical_bessel_j0_out =
    foreign
      "atg_special_spherical_bessel_j0_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_xlog1py =
    foreign "atg_special_xlog1py" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_xlog1py_other_scalar =
    foreign
      "atg_special_xlog1py_other_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_xlog1py_other_scalar_out =
    foreign
      "atg_special_xlog1py_other_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_xlog1py_out =
    foreign
      "atg_special_xlog1py_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_xlog1py_self_scalar =
    foreign
      "atg_special_xlog1py_self_scalar"
      (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_xlog1py_self_scalar_out =
    foreign
      "atg_special_xlog1py_self_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_xlogy =
    foreign "atg_special_xlogy" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_xlogy_other_scalar =
    foreign
      "atg_special_xlogy_other_scalar"
      (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_xlogy_other_scalar_out =
    foreign
      "atg_special_xlogy_other_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_xlogy_out =
    foreign
      "atg_special_xlogy_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_xlogy_self_scalar =
    foreign "atg_special_xlogy_self_scalar" (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_xlogy_self_scalar_out =
    foreign
      "atg_special_xlogy_self_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_zeta =
    foreign "atg_special_zeta" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_zeta_other_scalar =
    foreign "atg_special_zeta_other_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_zeta_other_scalar_out =
    foreign
      "atg_special_zeta_other_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_special_zeta_out =
    foreign
      "atg_special_zeta_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_zeta_self_scalar =
    foreign "atg_special_zeta_self_scalar" (scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_special_zeta_self_scalar_out =
    foreign
      "atg_special_zeta_self_scalar_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_split =
    foreign "atg_split" (gc_tensor @-> int64_t @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_split_copy =
    foreign
      "atg_split_copy"
      (gc_tensor @-> int64_t @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_split_copy_tensor_out =
    foreign
      "atg_split_copy_tensor_out"
      (ptr gc_tensor @-> int @-> gc_tensor @-> int64_t @-> int64_t @-> returning void)
  ;;

  let stubs_split_sizes =
    foreign
      "atg_split_sizes"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_split_with_sizes =
    foreign
      "atg_split_with_sizes"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> returning (ptr raw_tensor))
  ;;
